--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,13 +4,15 @@
     <string name="viduProject_content">
         Nếu bạn là một người đam mê nhiếp ảnh và mong muốn cống hiến một phần
         đam mê của mình cho các hoạt động tình nguyện, bạn hoàn toàn có thể tham
-        gia một chương trình như “Ánh đèn Flash của hy vọng”. Đây là một dự án phi
+        gia một chương trình như “Ánh đèn Flash của hy vọng”.\n Đây là một dự án phi
         lợi nhuận được thực hiện bởi những nhiếp ảnh gia, nhân viên trang điểm, nhân
         viên thời trang trẻ. Họ đến các bệnh viện nhi và chụp những bức ảnh về bệnh
         nhân ung thư, và tổ chức các event, chương trình ca nhạc gây quỹ cho các
-        hoạt động nghiên cứu và chữa trị ung thư.
-        Khi áp dụng tại Việt Nam, dự án này cần đặc biệt quan tâm và lưu ý đến tình trạng y tế và tình hình điều trị của các bệnh nhi. Việc ghi lại khoảnh khắc tràn đầy nghị lực của các em bừng sáng lên trên bệnh tật là một điều rất ý nghĩa, nhưng tiến trình điều trị của các em cũng cần được đảm bảo . Dự án này cần có sự phối hợp chặt chẽ của TNV, bác sỹ và gia đình bệnh nhi.
-Ngoài ra, cùng với cách thức như thế này, các tổ chức, nhóm tình nguyện hoàn toàn có thể mở rộng quy mô ra các đối tượng khác như trẻ lang thang, trẻ tự kỉ…
-Tuy nhiên khi áp dụng tại Việt Nam, việc lưu tâm tới sức khỏe, và yếu tố tâm lý của bệnh nhân, và những người kém may mắn là yếu tố vô cùng quan trọng.
+        hoạt động nghiên cứu và chữa trị ung thư.\n
+        Khi áp dụng tại Việt Nam, dự án này cần đặc biệt quan tâm và lưu ý đến tình trạng y tế và tình hình điều trị của các bệnh nhi.
+        Việc ghi lại khoảnh khắc tràn đầy nghị lực của các em bừng sáng lên trên bệnh tật là một điều rất ý nghĩa, nhưng tiến trình điều
+        trị của các em cũng cần được đảm bảo . Dự án này cần có sự phối hợp chặt chẽ của TNV, bác sỹ và gia đình bệnh nhi.\n
+        Ngoài ra, cùng với cách thức như thế này, các tổ chức, nhóm tình nguyện hoàn toàn có thể mở rộng quy mô ra các đối tượng khác như trẻ lang thang, trẻ tự kỉ…
+        Tuy nhiên khi áp dụng tại Việt Nam, việc lưu tâm tới sức khỏe, và yếu tố tâm lý của bệnh nhân, và những người kém may mắn là yếu tố vô cùng quan trọng.
     </string>
 </resources>
