--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -137,5 +137,6 @@
     </string-array>
 
     <string name="fab_create_project">Tạo dự án</string>
+    <string name="textview_null">Không có</string>
 
 </resources>
